adding test on controller

--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,11 @@
   ],
   "require": {
     "php": ">=8.1",
-    "illuminate/support": "^10.0",
-    "illuminate/routing": "^10.0"
+    "illuminate/routing": "^10.0",
+    "illuminate/support": "^10.0"
   },
   "require-dev": {
+    "orchestra/testbench": "^8.0",
     "phpunit/phpunit": "^10.0"
   },
   "config": {
